ClientApp/src/components/layout/sideMenu/SideMenu.module.scss
.siderContainer {
  height: 100vh;
  padding:  0 5px;

  .systemLogo {
    height: 3rem;
    display: flex;
    align-items: center;
    justify-content: center;

    .title {
      margin: 0
    }
  }

  .siderDivider {
    margin-top: 0;
  }
}

.sideMenuTree {
  white-space: nowrap;

  span[title] {
    overflow: hidden;

    button {
      overflow: hidden;
    }
  }
}

.sideMenuItem {
  .topLevelItem {
    padding-right: 1.5rem;
  }

  .sideMenuItemTitleContainer {
    display: inline-flex;
    width: 100%;
    justify-content: space-between;

    .itemTitle {
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .sideMenuActionButton {
      min-width: 1.5rem;
      margin-left: 5px;
      display: none;
    }
  }

  &:hover .sideMenuActionButton {
    display: block;
  }
}

